# analytics-repo

./: .env.example  .env.sample  .gitignore  .mise.toml  .pre-commit-config.yaml  Dockerfile  README.md  dagster.yaml  dbt-project.yaml  dbt_project.yaml  docker-compose.yaml  main.py  profiles.yaml  pyproject.toml  taskfile.yaml
config/: paths.py
docs/: overview-dagster-yaml.md  overview-dbt-project-yaml.md  overview-docker-compose-yaml.md  overview-docker-yaml.md  overview-dockerfile.md  sample_nasa_firms_txt_file_1  sample_nasa_firms_txt_file_2
notebooks/: 00_experiment.ipynb  00_experiment.py  01_download.ipynb  01_download.py  01_eda.ipynb  01_eda.py  01_eda_firms.ipynb  01_eda_firms.py  02_experiment.ipynb  02_experiment.py
notebooks/download_raw/: download.py
src/: __init__.py  assets.py  core.py  definitions.py  imports_geospatial.py  imports_standard.py  partitions.py  resources.py  settings.py
src/assets/: __init__.py
src/assets/nasa_firms/: assets.py
src/assets/project_cchain/: __init__.py  assets.py  jobs.py
src/assets/waqi/: assets.py  jobs.py
src/internal/: core.py
src/schemas/: chiangmai_airquality  chiangmai_airquality.py
